Refatoração de entidade Cliente e suas classes relacionadas.